[tool.poetry]
name = "park-report"
version = "0.1.0"
description = ""
authors = ["neperiana <ikbenmila@gmail.com>"]
readme = "README.md"
packages = [{include = "park_report"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
