[tool.poetry]
name = "park-report"
version = "0.1.0"
description = ""
authors = ["neperiana <ikbenmila@gmail.com>"]
readme = "README.md"
packages = [{include = "park_report"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.2"
selenium = "^4.9.1"
beautifulsoup4 = "^4.12.2"
streamlit = "^1.23.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
isort = "^5.12.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
